# Chess

./: CMakeLists.txt  LICENCE.md  README.md  build.sh
.github/workflows/: analyzeAndBuild.yml  c-cpp.yml  codeql.yml
include/: board.hpp  timer.hpp  turnManager.hpp
src/: CMakeLists.txt  main.cpp
src/board/: CMakeLists.txt  board.cpp  board.hpp  boardStatus.cpp  decodeCoordinates.cpp  decodePieceName.cpp  encodeCoordinates.cpp  getPieceInSquare.cpp  isColumnClogged.cpp  isCoordinateValid.cpp  isDiagonalClogged.cpp  isFrontClogged.cpp  isMoveClogged.cpp  isMoveValid.cpp  isPieceNameValid.cpp  isRowClogged.cpp  leftRowFreeSquare.cpp  listValidMoves.cpp  lowerColumnFreeSquare.cpp  move.cpp  rightRowFreeSquare.cpp  upperColumnFreeSquare.cpp
src/timer/: CMakeLists.txt  callbackEnded.cpp  callbackStillRunning.cpp  checkCallback.cpp  getElapsedTime.cpp  getName.cpp  getRemainingTime.cpp  isCallbackEnded.cpp  isCallbackStillRunning.cpp  isStarted.cpp  setCallback.cpp  setInterval.cpp  setName.cpp  startTimer.cpp  stopTimer.cpp  timer.cpp
src/turnManager/: CMakeLists.txt  endTurn.cpp  getBoardStatus.cpp  getInstance.cpp  getTurn.cpp  move.cpp  setTurn.cpp  toggleTurn.cpp  turnManager.cpp
